# ninja-regeneration

./: CMakeLists.txt  generator.c
